config/network-policy/allow-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled' or 'network.openshift.io/policy-group: monitoring'.
# Only Pods on those namespaces are able to gathering data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: odh-model-controller
    app.kubernetes.io/managed-by: kustomize
  name: odh-model-controller-allow-metrics-traffic
  namespace: opendatahub
spec:
  podSelector:
    matchLabels:
      control-plane: odh-model-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            metrics: enabled
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: monitoring
      ports:
        - port: 8443
          protocol: TCP
