config/network-policy/allow-webhook-traffic.yaml
# This NetworkPolicy allows ingress traffic to your webhook server running
# as part of the controller-manager from specific namespaces and pods. CR(s) which uses webhooks
# will only work when applied in namespaces labeled with 'webhook: enabled' or OpenShift/Kube APIServer
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: odh-model-controller
    app.kubernetes.io/managed-by: kustomize
  name: odh-model-controller
  namespace: opendatahub
spec:
  podSelector:
    matchLabels:
      control-plane: odh-model-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            webhook: enabled
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-kube-apiserver
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-apiserver
      ports:
        - port: 9443
          protocol: TCP
